--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - 5432:5432
     volumes:
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./postgres/raw_data:/data
     environment:
       POSTGRES_PASSWORD: admin
       POSTGRES_USER: admin
+      POSTGRES_DB: housing
